Add `ModulePathInfo ScanResult#getModulePathInfo()` (#308)